# zabbix-dpi-checker

./: .gitignore  CREDITS.md  README.en.md  README.md  pyproject.toml
.github/workflows/: ci.yml
deploy/: README.md  deploy-to.sh  install-prober.sh
deploy/sudoers.d/: dpi-probe
deploy/tests/: test_deploy_to.sh  test_install_prober_externalscripts.sh
probe/: dpi_probe.py
probe/lib/: __init__.py  doh_resolver.py  logger.py  probe_control.py  probe_https.py  probe_https_bytes.py  probe_openvpn.py  probe_quic.py  probe_rdgw.py  probe_rdp.py  probe_smtp.py  probe_ssh.py  probe_tls_frag.py  probe_tspu_liveness.py  probe_wg_handshake.py  probe_wg_rekey.py  probe_wireguard.py  resolver.py  verdict.py  wg_crypto.py
probe/tests/: conftest.py  test_doh_resolver.py  test_dpi_probe_cli.py  test_probe_control.py  test_probe_https.py  test_probe_https_bytes.py  test_probe_openvpn.py  test_probe_quic.py  test_probe_rdgw.py  test_probe_rdp.py  test_probe_smtp.py  test_probe_ssh.py  test_probe_tls_frag.py  test_probe_tspu_liveness.py  test_probe_wg_handshake.py  test_probe_wg_rekey.py  test_probe_wireguard.py  test_resolver.py  test_verdict.py  test_wg_crypto.py
template/: dpi-mesh-aggregator.yaml  dpi-mesh-blocking-detection.yaml
template/tests/: test_aggregator_yaml.py  test_template_yaml.py
