[project]
name = "dpi-checker"
version = "0.1.0"
description = "DPI/RKN blocking detection for Zabbix mesh probing"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RET", "PT"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["probe/tests", "template/tests"]
addopts = "-q --strict-markers"
pythonpath = ["."]
markers = [
    "integration: hits real external network (skipped by default)",
]
